--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "jsdom": "^21.0.0",
+    "memory-cache": "^0.2.0",
     "playwright": "^1.29.2"
   }
 }
